--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "yarn": "^1.22.4"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.0",
     "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
